<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvlength1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/length1_text"
        android:textColor="@android:color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvlength2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/length2_text"
        android:textColor="@android:color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tvlength1"
        app:layout_constraintTop_toBottomOf="@+id/tvlength1" />

    <EditText
        android:id="@+id/etLength1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:backgroundTint="@android:color/black"
        android:ems="10"
        android:hint="@string/editTextLength1Hint"
        android:inputType="number"
        android:textColorHighlight="#3F51B5"
        android:textColorLink="@android:color/holo_blue_dark"
        android:textCursorDrawable="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvlength1"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />

    <EditText
        android:id="@+id/etLength2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:backgroundTint="@android:color/black"
        android:ems="10"
        android:hint="@string/editTextLength2Hint"
        android:inputType="number"
        android:textColorHighlight="#3F51B5"
        android:textColorLink="@android:color/holo_blue_dark"
        android:textCursorDrawable="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvlength2"
        app:layout_constraintTop_toBottomOf="@+id/etLength1"
        android:autofillHints="" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="150dp" />

    <ImageView
        android:id="@+id/imageViewTriangle"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        app:srcCompat="@drawable/triangle"
        android:onClick="selectShape"/>

    <ImageView
        android:id="@+id/imageViewSquare"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toEndOf="@+id/imageViewTriangle"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        app:srcCompat="@drawable/square"
        android:onClick="selectShape"/>

    <ImageView
        android:id="@+id/imageViewCircle"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.372"
        app:layout_constraintStart_toEndOf="@+id/imageViewSquare"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        app:srcCompat="@drawable/circle"
        android:onClick="selectShape"/>

    <TextView
        android:id="@+id/tvShapeName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:text="@string/shape_name_default"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewSquare" />

    <Button
        android:id="@+id/calculateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:onClick="calculateArea"
        android:text="@string/calculate_button_text"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvShapeName" />

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:shadowColor="@android:color/black"
        android:text="@string/result_tv_text"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calculateButton" />

    <Button
        android:id="@+id/clearButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:onClick="clearCalculator"
        android:text="@string/clear_button_text"
        app:layout_constraintEnd_toEndOf="@+id/calculateButton"
        app:layout_constraintStart_toStartOf="@+id/calculateButton"
        app:layout_constraintTop_toBottomOf="@+id/tvResult" />

</androidx.constraintlayout.widget.ConstraintLayout>